objects/Module_Learning_Outcome__c.object
<CustomObject><fields>
        <fullName>Learning_Outcome__c</fullName>
        <label>Learning Outcome</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Method_of_Teaching__c</fullName>
        <label>Method of Teaching</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Mode_of_Assessment__c</fullName>
        <label>Mode of Assessment</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Module_Version__c</fullName>
        <label>Module Version</label>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Module Learning Outcomes</relationshipLabel>
        <relationshipName>Module_Learning_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Record_No__c</fullName>
        <description>Set by Workflow</description>
        <inlineHelpText>Leave blank on record creation if automatic numbering is required (set by Workflow)</inlineHelpText>
        <label>No.</label>
        <length>5</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Module Learning Outcome</label><nameField>
        <displayFormat>MLO-{000000}</displayFormat>
        <label>Module Learning Outcome Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Module Learning Outcomes</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>